--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
 
-    <header>
+    <header id="top">
         <nav class="nav">
-            <a class="logo" href="#">INITIAL</a>
+            <a class="logo" href="#top">INITIAL</a>
             <ul class="nav-links">
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="active" href="#top">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -37,32 +37,95 @@
         <div class="slider sub">
             <h1>Create Good Free Templates</h1>
             <p>A free template by <a class="link" href="#">uicookies.com</a></p>
-            <a class="btn" href="#">Get Started</a>
+            <a class="btn" href="#">Get Started <i class="fas arrow fa-arrow-right"></i></a>
         </div>
     </header>
 
-    <section class="member">
+    <section id="about" class="member">
         <div class="owl-carousel owl-theme">
             <div class="member-item">
+                <div class="info">
+                    <h4>Michale John</h4>
+                    <p>Director</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
                 <img src="./images/person_1.jpg" alt="Man">
             </div>
             <div class="member-item">
+                <div class="info">
+                    <h4>Antony Jeams</h4>
+                    <p>CEO</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
                 <img src="./images/person_2.jpg" alt="Man">
             </div>
             <div class="member-item">
+                <div class="info">
+                    <h4>David William</h4>
+                    <p>Manager</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
                 <img src="./images/person_3.jpg" alt="Man">
             </div>
             <div class="member-item">
+                <div class="info">
+                    <h4>Michale John</h4>
+                    <p>Director</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
                 <img src="./images/person_1.jpg" alt="Man">
             </div>
             <div class="member-item">
+                <div class="info">
+                    <h4>Antony Jeams</h4>
+                    <p>CEO</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
                 <img src="./images/person_2.jpg" alt="Man">
+            </div>
+            <div class="member-item">
+                <div class="info">
+                    <h4>David William</h4>
+                    <p>Manager</p>
+                    <div class="social">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                </div>
+                <img src="./images/person_3.jpg" alt="Man">
             </div>
         </div>
     </section>
 
 
-    <section class="feature">
+    <section id="services" class="feature">
         <h2>Move Forward. Create Beautiful Templates.</h2>
         <p class="feature-tag">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
             there live the blind
@@ -109,7 +172,7 @@
     <section class="subscribe sub">
         <h1>Subscribe To Download</h1>
         <p>A free template by <a class="link" href="#">uicookies.com</a></p>
-        <a class="btn" href="#">Get Started</a>
+        <a class="btn" href="#">Get Started <i class="fas arrow fa-arrow-right"></i></a>
     </section>
 
 
@@ -161,9 +224,9 @@
     </section>
 
 
-    <footer>
+    <footer id="contact">
         <div>
-            <p class="logo">INITIAL</p>
+            <a href="#top" class="logo">INITIAL</a>
         </div>
         <div>
             <h3>Company</h3>
